Fix vertical align of destkop menu in header bar

--- a/assets/sass/scaffolding.scss
+++ b/assets/sass/scaffolding.scss
@@ -298,6 +298,7 @@ div.custom-logo {
 			}
 			float: left;
 			text-align: left;
+			margin: 0.55em 0;
 		}
 		@include for(medium-screens) {
 			text-align: left;
