--- a/src/style.css
+++ b/src/style.css
@@ -850,6 +850,7 @@ div.custom-logo a {
 @media screen and (min-width: 1100px) {
 	.header-bar ul:not(.mobile-menu) .menu {
 		float: left;
+		margin: 0.55em 0;
 		text-align: left;
 	}
 
